<resources>
    <string name="app_name">DP3 &amp; DP4</string>
    <string name="noteikumi">Noteikumi:</string>
    <string name="dp3_noteikumi">DP3 Noteikumi</string>
    <string name="dp4_noteikumi">DP4 Noteikumi</string>
    <string name="dp3_noteikumuTexts"><![CDATA[
        <b>DP3 Noteikumi</b><br/>
        <p>Šaušana ar dienesta pistoli 25 m distancē, mērķis Nr.4 (melnais aplis), ar vienu vai abām rokām.</p>
        <ul>3 piešaudes šāvieni, laiks 1 minūte.</ul>
        <ul>30 ieskaites šāvieni 3 sērijās. Laiks 5 minūtes katrai 10 šāvienu sērijai.</ul>
        <ul>Mēlītes nospiediens ne mazāks par 1,360 kg.</ul>
        <ul>Vingrinājumu drīkst izpildīt tikai ar pilnapvalka lodēm (no Angļu val. Full  metal  jacket) tērauda, kapara vai misiņa apvalkā!</ul>
        ]]>
    </string>
    <string name="dp4_noteikumuTexts"><![CDATA[
        <b>DP4 Noteikumi</b><br/>
        <p>Šaušana ar dienesta pistoli 25 m distancē, mērķis Nr.4 (melnais aplis).</p>
        <ul>6 piešaudes šāvieni, laiks 3 minūtes.</ul>
        <ul>6 ieskaites šāvieni 1 minūtē ar vienu roku.</ul>
        <ul>7 ieskaites šāvieni 30 sekundēs ar vienu vai abām rokām.</ul>
        <ul>7 ieskaites šāvieni 15 sekundēs ar abām rokām.</ul>
        <ul>Mēlītes nospiediens ne mazāks par 1,360 kg.</ul>
        <ul>Vingrinājumu drīkst izpildīt tikai ar pilnapvalka lodēm (no Angļu val. Full  metal  jacket) tērauda, kapara vai misiņa apvalkā!</ul>
        ]]>
    </string>
    <string name="dp3_taimeri">DP3 Taimeri</string>
    <string name="dp4_taimeri">DP4 Taimeri</string>
    <string name="taimeri">Taimeri:</string>
    <string name="dp3_timeri_nosaukums">DP3 Timeri</string>
    <string name="dp3_timeri_piesaude">DP3 Piešaude</string>
    <string name="dp3_timeri_serija">DP3 ieskaites sērijas</string>
    <string name="dp3_piesaude_info">Sagatavoties 1 min. Uzmanību 7 sec. Starts 1 min.</string>
    <string name="dp3_serija_info">Sagatavoties 1 min. Uzmanību 7 sec. Starts 5 min.</string>
    <string name="dp4_timeri_nosaukums">DP4 Timeri</string>
    <string name="dp4_timeri_piesaude">DP4 Piešaude</string>
    <string name="dp4_timeri_serija_1">DP4 1. Sērija</string>
    <string name="dp4_timeri_serija_2">DP4 2. Sērija</string>
    <string name="dp4_timer_serija_3">DP4 3. Sērija</string>
    <string name="dp4_timeri_piesaude_info">Sagatavoties 1 min. Uzmanību 7sec. Starts 3 min.</string>
    <string name="dp4_timer_serija1_info">Sagatavoties 1 min. Uzmanību 7 sec. Starts 1 min.</string>
    <string name="dp4_timer_serija2_info">Sagatavoties 1 min. Uzmanību 7 sec. Starts 30 sec.</string>
    <string name="dp4_timer_serija3_info">Sagatavoties 1 min. Uzmanību 7 sec. Starts 15 sec.</string>
    <string name="Timeri_sacensibam">"Sacensības   "</string>
    <string name="Timeri_sacensibu_info">Sacensību režīmā taimeru skaņas signāli ir izslēgti.</string>
    //Timeru lapas teksti
    <string name="sound_off">Skaņas signāli izslēgti</string>
    <string name="sound_on">Skaņas signāli ieslēgti</string>
    <string name="piesaudes_serija">%s piešaudes sērija</string>
    <string name="DP3_ieskaites_serija">%s ieskaites sērija</string>
    <string name="DP4_ieskaites_serija">%s %d. ieskaites sērija</string>
    <string name="sagatavoties">Sagatavoties</string>
    <string name="uzmanibu">Uzmanību!</string>
    <string name="starts">Starts!</string>
    <string name="stop">Stop!!</string>
    <string name="iestatijumi">Iestatījumi</string>
    <string name="setting_gr_skana">Audio iestatījumi</string>
    <string name="setting_skana_komandas">Izvēlieties komandu signālus</string>
    <string name="settings_audio_balss">Balss komandas</string>
    <string name="settings_audio_beep">Skaņas signāls</string>
    <string name="settings_audio_silence">Klusums</string>
    <string name="settings_skana_minute">Laika brīdinājumi</string>
    <string name="settings_skana_minuteDescription">Skaņas signāls ik minūti</string>
    <string name="sound_off_in_settings">Skaņas signāli izslēgti iestatījumos</string>
    <string name="Stop_button">ATCELT</string>
    <string name="Exit_button">IZIET</string>
    <string name="izladet">Izlādēt</string>
    <string name="Start_button">SĀKT</string>
    <string name="shoot_ID">Nr.</string>
    <string name="shoot_Time">Laiks</string>
    <string name="shoot_Res">Ieskaite</string>
    <string name="accept">Ieskaitīts</string>
    <string name="not_accept">Neieskaitīts</string>
    <string name="shoot_register">"Reģistrēt šāvienus   "</string>
    <string name="register_switch_info">Reģistrēt šāvienus (tikai treniņa režīmā)</string>
    <string name="settings_register_Shoot">Vienmēr reģistrēt šāvienus</string>
    <string name="settings_register_shoot_Description">Šāvienu reģistrācija ieslēgta pēc noklusējuma</string>
    <string name="setting_gr_register">Šāvienu reģistra iestatījumi</string>
    <string name="settings_register_level">Šāviena skaņas līmenis</string>
    <string name="settings_register_level_info">Skaņa virs šī līmeņa tiks reģistrēta kā šaviens</string>
    <string name="settings_echo_delay">Šāviena atbalss aizture</string>
</resources>
