<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/setting_gr_skana">
    <ListPreference
        android:dialogTitle="@string/setting_skana_komandas"
        android:entries="@array/skanas_nosaukumi"
        android:entryValues="@array/skanas_id"
        android:key="command_sound_string"
        android:summary="%s"
        android:title="@string/setting_skana_komandas"
        android:defaultValue="balss"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="minute_beep_boolean"
        android:title="@string/settings_skana_minute"
        android:summary="@string/settings_skana_minuteDescription"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_gr_register">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="register_shoot_boolean"
            android:summary="@string/settings_register_shoot_Description"
            android:title="@string/settings_register_Shoot" />
        <ListPreference
            android:defaultValue="80"
            android:entries="@array/Shoot_Level_name"
            android:entryValues="@array/Shoot_Level_value"
            android:key="register_level_int"
            android:summary="%s"
            android:title="@string/settings_register_level" />
        <ListPreference
            android:defaultValue="200"
            android:entries="@array/Echo_time_name"
            android:entryValues="@array/Echo_time_value"
            android:key="register_delay_millis_int"
            android:summary="%s"
            android:title="@string/settings_echo_delay" />
    </PreferenceCategory>
</PreferenceScreen>